# pbrt

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: CMakeLists.txt  Doxyfile.in
include/pbrt/: alignment_of.hpp  api.hpp  assert.hpp  assertions.hpp  exceptions.hpp  export.hpp  inline.hpp  simd.hpp  types.hpp
include/pbrt/debug/: assertions.hpp  debug_break.hpp
include/pbrt/ecs/: scene.hpp  types.hpp
include/pbrt/ecs/components/: transform_component.hpp
include/pbrt/logging/: log_level.hpp  log_record.hpp  logger.hpp
include/pbrt/math/: constants.hpp  coordinate_system.hpp  matrix.hpp  matrix_traits.hpp  matrix_transform.hpp  quaternion.hpp  traits.hpp  utility.hpp  vector.hpp  vector_traits.hpp
include/pbrt/math/simd/: simd_traits.hpp
include/pbrt/profiling/: profile_data.hpp  profiler.hpp  time.hpp
src/: CMakeLists.txt  assert.cpp  assertions.cpp
src/debug/: CMakeLists.txt  debug_break.cpp
src/ecs/: CMakeLists.txt  scene.cpp
src/ecs/components/: CMakeLists.txt  transform_component.cpp
src/logging/: CMakeLists.txt  log_record.cpp  logger.cpp
src/profiling/: CMakeLists.txt  profile_data.cpp  profiler.cpp
testbed/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  assertions.cpp  main.cpp  types.cpp
tests/core/: CMakeLists.txt
tests/ecs/: CMakeLists.txt  scene.cpp
tests/ecs/components/: CMakeLists.txt  transform_component.cpp
tests/logging/: CMakeLists.txt  logging.cpp  logging_tests.cpp
tests/math/: CMakeLists.txt  matrix.cpp  matrix_tests.cpp  matrix_transform.cpp  quaternion.cpp  test_constants.cpp  test_utility.cpp  test_vector.cpp  test_vector_traits.cpp  vector.cpp  vector_tests.cpp
tests/math/simd/: CMakeLists.txt  test_simd_traits.cpp
tests/math/vector/: CMakeLists.txt  test_vector_access.cpp  test_vector_algorithms.cpp  test_vector_arithmetic.cpp  test_vector_comparison.cpp  test_vector_comprehensive.cpp  test_vector_iterators.cpp  test_vector_simd.cpp
tests/profiling/: CMakeLists.txt  profiler.cpp  profiler_tests.cpp
